Revision history for beacon2-ri-tools

2.0.8  2025-0X-XX

    - Addex 'examples' dir with hg38 (GRCh38)

2.0.7  2025-02-22
    - Moved 'browser/web' to 'utils/bff_browser/static/assets'
    - Added argument '-projectdir-override' to enable external assignment of id (e.g., Celery)
    - Renamed internal parameter from 'ncpu' to 'threads' and option '-n' to '-t'

2.0.6  2025-01-15
    - Created a Flask app for 'utils/bff_browser' (currently in development)
    - Changed 'bff2html' to output JSON arrays instead of NDJSON for files like 'foo.json' (e.g., 'exome.json')
    - Updated 'docker-compose.yaml' to reflect recent changes
    - Renamed 'bff_api' to 'bff_portal' and added a basic frontend interface for the API

2.0.5  2025-01-07
    - The 'config.yaml' for the 'beacon' script is now pre-formatted for the Dockerized version
    - Renamed 'test/param.in' to 'test/param.yaml'
    - Enforced Browser HTML display using Python3's default HTTP server

2.0.4  2024-12-03
    - Moved 'beacon' script to 'bin/beacon' and updated paths.
    - Reorganized repo in folders

2.0.3  2024-05-24
    - Added Unicode support to 'utils/bff_validator'

2.0.2  2024-02-07
    - Updated 'docker-compose.yml'.
    - Changed 'config.yml' to enable connecting to @mongo from within 'beacon2-ri-tools' container

2.0.1  2024-01-22
    - Updated contact email to @cnag.eu.
    - 'utils/bff-validator': Adjusted STDOUT printout details
    - 'test': Sorted 'frequencyInPopulations' by key in 'genomicVariationsVcf.json.gz'
    - Docker Hub location updated to 'manuelrueda/beacon2-ri-tools'
    - Moved 'BEACON' to 'lib/BEACON'
    - Fixed 'Dockerfile':
        - Changed base image from 'ubuntu' to 'ubuntu:20.04' (thanks to SJD folks)

2.0.0  2022-08-18
    - Stable version released along with the accompanying paper:
        * _Bioinformatics_, btac568, https://doi.org/10.1093/bioinformatics/btac568